--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,6 @@ qodana:
     name: jetbrains/qodana-jvm
     entrypoint: [""]
   variables:
-    QODANA_TOKEN: $eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJvcmdhbml6YXRpb24iOiIzd2xhMiIsInByb2plY3QiOiJwUXdsbCIsInRva2VuIjoicFY3Z1kifQ.PKljU8mQF3fPY2BIbxSvscAlZsCx_9IrVHkLmWNAU4s
+    QODANA_TOKEN: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJvcmdhbml6YXRpb24iOiIzd2xhMiIsInByb2plY3QiOiJwUXdsbCIsInRva2VuIjoicFY3Z1kifQ.PKljU8mQF3fPY2BIbxSvscAlZsCx_9IrVHkLmWNAU4s
   script:
     - qodana --save-report --results-dir=$CI_PROJECT_DIR/.qodana
